--- a/Projet_2_Michel_Mbaka.css
+++ b/Projet_2_Michel_Mbaka.css
@@ -71,8 +71,6 @@ nav
     .header_inscrire 
     {
         order: 2;
-        justify-content: top;
-        color: #9f9f9f;
     }
     .titre_principal a:hover
     {
@@ -815,7 +813,7 @@ width: 240px;
         width: 99.8%;
         height: 100%;
     }
-    .b_el11 a,.b_el33 a, 
+    .b_el11 a,.b_el33 a 
     {
         width: 100%;
     }
@@ -857,7 +855,7 @@ width: 240px;
         width: 99.8%;
         height: 100%;
     }
-    .b_e22 a,.b_e44 a, 
+    .b_e22 a,.b_e44 a 
     {
         width: 100%;
     }
@@ -882,7 +880,7 @@ width: 240px;
         width: 99.8%;
         height: 100%;
     }
-    .b_22 a,.b_44 a, 
+    .b_22 a,.b_44 a 
     {
         width: 100%;
     }
